Bump to jre 17 for jfx-client