@@ -433,41 +433,6 @@
 				</executions>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.3.0</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-						<configuration>
-							<shadedArtifactAttached>false</shadedArtifactAttached>
-							<!--<shadedClassifierName>allinone</shadedClassifierName>-->
-							<!--<minimizeJar>true</minimizeJar>-->
-							<finalName>${project.artifactId}-${app.version}-app</finalName>
-							<artifactSet>
-								<includes>
-									<include>*:*</include>
-								</includes>
-							</artifactSet>
-							<transformers>
-								<transformer
-										implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-									<resource>reference.conf</resource>
-								</transformer>
-								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<manifestEntries>
-										<Main-Class>ch.seidel.kutu.KuTuApp</Main-Class>
-									</manifestEntries>
-								</transformer>
-							</transformers>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
 				<groupId>net.alchim31.maven</groupId>
 				<artifactId>scala-maven-plugin</artifactId>
 				<version>${scala-maven-plugin.version}</version>
@@ -538,39 +503,54 @@
 				<version>3.0.0</version>
 				<executions>
 					<execution>
+						<id>prepare-resources</id>
+						<phase>package</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<executable>./prep-jfx-package.sh</executable>
+						</configuration>
+					</execution>
+					<execution>
 						<id>package-jar</id>
 						<phase>package</phase>
 						<goals>
 							<goal>exec</goal>
 						</goals>
 						<configuration>
-							<executable>${jdk-home}/bin/jpackager</executable>
+							<executable>${jdk-home}/bin/jpackage</executable>
 							<arguments>
-								<argument>create-installer</argument>
-								<argument>--module-path</argument>
-								<argument>${jdk-home}/jmods</argument>
-								<argument>--class</argument>
+								<argument>--main-class</argument>
 								<argument>ch.seidel.kutu.KuTuApp</argument>
 								<argument>--input</argument>
-								<argument>${project.build.directory}</argument>
-								<argument>--files</argument>
-								<argument>${project.artifactId}-${app.version}-app.jar</argument>
-								<argument>--output</argument>
+								<argument>${project.build.directory}/package</argument>
+								<argument>--dest</argument>
 								<argument>${project.build.directory}/${OS}</argument>
 								<argument>--name</argument>
 								<argument>TurnerWettkampf-App-v${parsedVersion.majorVersion}r${parsedVersion.minorVersion}</argument>
-								<argument>--version</argument>
+								<argument>--app-version</argument>
 								<argument>${app.version}</argument>
 								<argument>--main-jar</argument>
-								<argument>${project.artifactId}-${app.version}-app.jar</argument>
+								<argument>${project.artifactId}-${app.version}.jar</argument>
 								<argument>--icon</argument>
 								<argument>${project.build.sourceDirectory}/../resources/images/${app.logo}</argument>
-								<argument>--category</argument>
-								<argument>Sport</argument>
 								<argument>--copyright</argument>
 								<argument>Interpolar</argument>
 								<argument>--vendor</argument>
 								<argument>Interpolar</argument>
+								<argument>--java-options</argument>
+								<argument>
+									--add-opens=java.base/java.lang=ALL-UNNAMED
+									--add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+									--add-opens=java.base/java.net=ALL-UNNAMED
+									--add-opens=java.base/java.nio=ALL-UNNAMED
+									--add-opens=java.base/java.time=ALL-UNNAMED
+									--add-opens=java.base/java.util=ALL-UNNAMED
+									--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+									--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+									--add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+								</argument>
 							</arguments>
 						</configuration>
 					</execution>
